implementata funzionalità sulle get all se non vengono passati i filtri viene restita la lista di tutto